# lore

./: .clang-format  .clangd  .cppcheck_suppressions  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .ripgreprc  CLAUDE.md  CLION_FIX.md  CMakeLists.txt  CMakeLists.txt.backup2  CMakeLists.txt.backup3  CMakePresets.json  OBSIDIAN_SETUP_INSTRUCTIONS.md  README.md  VULKAN_IMAGE_SYSTEM_SUMMARY.md  check_format.bat  claude_config.json  compile_commands.json  configure.bat  configure_2022.bat  configure_vs.bat  copy_compile_commands.bat  format_code.bat  glm_cmake_fix.patch  run_cppcheck.bat  test_eglot_fix.el  update_claude_config.ps1
.claude/: settings.json  settings.local.json
docs/: README.md  (+8 more)
shaders/audio/: CMakeLists.txt  gpu_arena_allocator.comp  gpu_arena_deallocator.comp  gpu_audio_hrtf.comp  gpu_audio_mixing.comp  gpu_ecs_transform.comp
src/assets/: CMakeLists.txt  assets.cpp  example_usage.cpp
src/assets/lore_assets.dir/Debug/: .d.json  assets.cpp.module.json
src/assets/lore_assets.dir/Debug/lore_assets.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_assets.lastbuildstate
src/assets/lore_assets.dir/Debug/lore_assets_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/audio/: CMakeLists.txt  audio.cpp  audio_gpu_enhancements.cpp  audio_original.cpp  gpu_environmental_audio.cpp  gpu_environmental_error_handling.cpp
src/audio/lore_audio.dir/Debug/: .d.json  audio.cpp.module.json
src/audio/lore_audio.dir/Debug/lore_audio.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_audio.lastbuildstate
src/audio/lore_audio.dir/Debug/lore_audio_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/core/: CMakeLists.txt  log.cpp
src/ecs/: CMakeLists.txt  advanced_ecs.cpp  component_tracking.cpp  ecs.cpp  entity_manager.cpp  serialization.cpp  world_manager.cpp
src/ecs/components/: ai_vision_behavior_component.cpp  atmospheric_component.cpp  gpu_particle_component.cpp  heat_distortion_component.cpp  visibility_component.cpp  vision_component.cpp
src/ecs/lore_ecs.dir/Debug/: .d.json  advanced_ecs.cpp.module.json  component_tracking.cpp.module.json  ecs.cpp.module.json  entity_manager.cpp.module.json  lore_ecs.lib.recipe  serialization.cpp.module.json  world_manager.cpp.module.json
src/ecs/lore_ecs.dir/Debug/lore_ecs.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_ecs.lastbuildstate
src/ecs/lore_ecs.dir/Debug/lore_ecs_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/ecs/systems/: ai_vision_system.cpp  combustion_system.cpp  environment_controller.cpp  heat_distortion_system.cpp  thermal_system.cpp  vision_system.cpp  volumetric_fire_system.cpp
src/graphics/: CMakeLists.txt  deferred_renderer.cpp  gpu_compute.cpp  graphics.cpp  hdri_environment.cpp  post_process_pipeline.cpp  vma_implementation.cpp
src/graphics/lore_graphics.dir/Debug/: .d.json  gpu_compute.cpp.module.json  graphics.cpp.module.json  vma_implementation.cpp.module.json
src/graphics/lore_graphics.dir/Debug/lore_graphics.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_graphics.lastbuildstate
src/graphics/lore_graphics.dir/Debug/lore_graphics_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/input/: CMakeLists.txt  event_system.cpp  glfw_input_handler.cpp  input.cpp  input_debug.cpp  input_ecs.cpp  input_events.cpp  input_listener_manager.cpp
src/input/lore_input.dir/Debug/: .d.json  event_system.cpp.module.json  glfw_input_handler.cpp.module.json  input.cpp.module.json  input_debug.cpp.module.json  input_ecs.cpp.module.json  input_events.cpp.module.json  input_listener_manager.cpp.module.json
src/input/lore_input.dir/Debug/lore_input.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_input.lastbuildstate
src/input/lore_input.dir/Debug/lore_input_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/input/tests/: CMakeLists.txt  input_system_tests.cpp
src/math/: CMakeLists.txt  math.cpp
src/math/lore_math.dir/Debug/: .d.json  math.cpp.module.json
src/math/lore_math.dir/Debug/lore_math.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  lore_math.lastbuildstate
src/math/lore_math.dir/Debug/lore_math_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
src/physics/: CMakeLists.txt  physics.cpp
src/physics/lore_physics.dir/Debug/: .d.json  physics.cpp.module.json
src/vision/: CMakeLists.txt  README.md  bresenham_3d.cpp  shadow_casting_fov.cpp  vision_debug.cpp
src/world/: CMakeLists.txt  debris_physics.cpp  fluid_debris_interaction.cpp  tile_damage.cpp  tile_mesh_cache.cpp  tiled_importer.cpp  tilemap_world_system.cpp  voronoi_fracture.cpp
(+308 files in other folders)
